--- a/src/app/layout/vertical/vertical.component.html
+++ b/src/app/layout/vertical/vertical.component.html
@@ -37,7 +37,7 @@
 
     <app-menu [src]="'assets/data/menu.json'"></app-menu>
 
-    <div class="add-patient">
+    <!-- <div class="add-patient">
       <button
         tc-button
         [view]="'accent'"
@@ -54,7 +54,7 @@
       <a href="#" class="link">
         <tc-icon [iconClass]="'icofont-question-square'" [tcFontSize]="'1.3em'"></tc-icon>FAQ & Support
       </a>
-    </menu>
+    </menu> -->
 
     <navbar-skeleton [type]="'vertical'" [loaded]="loaded"></navbar-skeleton>
   </navbar>
