fix for search table

--- a/src/app/ui/components/input/input.component.html
+++ b/src/app/ui/components/input/input.component.html
@@ -1,4 +1,4 @@
-<div class="tc-input-wrap d-none" (click)="onFocus(disabled || readonly)" [ngStyle]="getStyles()">
+<div class="tc-input-wrap" (click)="onFocus(disabled || readonly)" [ngStyle]="getStyles()">
   <div
     class="input-prefix input-icon"
     [ngStyle]="{ 'color': properties.prefixIconColor }"
