fi for data tables

--- a/src/app/layout/vessel-details/vessel-details.component.html
+++ b/src/app/layout/vessel-details/vessel-details.component.html
@@ -1,5 +1,5 @@
-<tc-card class="mb-0">
-  <tc-table [rows]="tableData" [hovered]="true">
+<tc-card class="mb-0" *ngIf="tableData">
+  <tc-table [rows]="tableData" [pagination]="true" [hovered]="true">
     <tc-table-col [columnTitle]="'SCN'" [columnName]="'scn'" [enableFiltering]="true"></tc-table-col>
     <tc-table-col [columnTitle]="'VESSEL NAME'" [columnName]="'vesselName'" [enableFiltering]="true"></tc-table-col>
     <tc-table-col [columnTitle]="'ATA'" [columnName]="'ata'" [enableFiltering]="true"></tc-table-col>
