--- a/src/app/layout/vessel-particulars/vessel-particulars.component.html
+++ b/src/app/layout/vessel-particulars/vessel-particulars.component.html
@@ -1,5 +1,5 @@
 <tc-card class="mb-0">
-  <tc-table [rows]="tableData" [hovered]="true">
+  <tc-table [rows]="tableData" [pagination]="true" [hovered]="true">
     <tc-table-col [columnTitle]="'VESSEL ID'" [columnName]="'vesselId'" [enableFiltering]="true"></tc-table-col>
     <tc-table-col [columnTitle]="'VESSEL NAME'" [columnName]="'vesselName'" [enableFiltering]="true"></tc-table-col>
     <tc-table-col [columnTitle]="'VESSEL CODE'" [columnName]="'vesselCode'" [enableFiltering]="true"></tc-table-col>
