integrating data tables

--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -12,14 +12,14 @@
       </ul>
     </div>
 
-    <div class="col-12 col-md-6 text-right">
+    <!-- <div class="col-12 col-md-6 text-right">
       <div class="d-flex align-items-center justify-content-center justify-content-md-end">
         <span>Version {{ version }}</span>
         <button class="no-style ml-2" (click)="openModal(modalBody, 'Application\'s settings')">
           <tc-icon [iconClass]="'icofont-ui-settings'" [tcFontSize]="26" [tcColor]="['#336cfb', '#336cfb']"></tc-icon>
         </button>
       </div>
-    </div>
+    </div> -->
   </div>
 
   <div class="footer-skeleton">
