--- a/src/app/layout/vessel-particulars/vessel-particulars.component.html
+++ b/src/app/layout/vessel-particulars/vessel-particulars.component.html
@@ -1,11 +1,11 @@
 <tc-card class="mb-0">
   <tc-table [rows]="tableData" [pagination]="true" [hovered]="true">
-    <tc-table-col [columnTitle]="'VESSEL ID'" [columnName]="'vesselId'" [enableFiltering]="true"></tc-table-col>
-    <tc-table-col [columnTitle]="'VESSEL NAME'" [columnName]="'vesselName'" [enableFiltering]="true"></tc-table-col>
-    <tc-table-col [columnTitle]="'VESSEL CODE'" [columnName]="'vesselCode'" [enableFiltering]="true"></tc-table-col>
-    <tc-table-col [columnTitle]="'TYPE'" [columnName]="'type'" [enableFiltering]="true"></tc-table-col>
-    <tc-table-col [columnTitle]="'MAX TEUS'" [columnName]="'maxTeus'" [enableFiltering]="true"></tc-table-col>
-    <tc-table-col [columnTitle]="'CARGO TYPE'" [columnName]="'cargoType'" [enableFiltering]="true"></tc-table-col>
-    <tc-table-col [columnTitle]="'STATUS'" [columnName]="'status'" [enableFiltering]="true"></tc-table-col>
+    <tc-table-col [columnTitle]="'VESSEL ID'" [columnName]="'vesselId'" [enableSorting]="true" [enableFiltering]="true"></tc-table-col>
+    <tc-table-col [columnTitle]="'VESSEL NAME'" [columnName]="'vesselName'" [enableSorting]="true" [enableFiltering]="true"></tc-table-col>
+    <tc-table-col [columnTitle]="'VESSEL CODE'" [columnName]="'vesselCode'" [enableSorting]="true" [enableFiltering]="true"></tc-table-col>
+    <tc-table-col [columnTitle]="'TYPE'" [columnName]="'type'" [enableSorting]="true" [enableFiltering]="true"></tc-table-col>
+    <tc-table-col [columnTitle]="'MAX TEUS'" [columnName]="'maxTeus'" [enableSorting]="true" [enableFiltering]="true"></tc-table-col>
+    <tc-table-col [columnTitle]="'CARGO TYPE'" [columnName]="'cargoType'" [enableSorting]="true" [enableFiltering]="true"></tc-table-col>
+    <tc-table-col [columnTitle]="'STATUS'" [columnName]="'status'" [enableSorting]="true" [enableFiltering]="true"></tc-table-col>
   </tc-table>
 </tc-card>
