--- a/src/app/layout/components/login-form/login-form.component.html
+++ b/src/app/layout/components/login-form/login-form.component.html
@@ -7,12 +7,12 @@
     <tc-input [placeholder]="'Password'" [type]="'password'" formControlName="pass"></tc-input>
   </tc-form-group>
 
-  <tc-form-group>
+  <!-- <tc-form-group>
     <tc-switcher [value]="true">Remember me</tc-switcher>
-  </tc-form-group>
+  </tc-form-group> -->
 
   <div class="actions justify-content-between">
-    <button tc-button [view]="'accent'" [beforeIcon]="'icofont-login'">
+    <button tc-button [view]="'accent'" class="w-100">
       Login
     </button>
   </div>
