--- a/src/app/layout/public/public.component.html
+++ b/src/app/layout/public/public.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-lg-4 offset-lg-2 align-self-center f18 text-white" style="border: 1px solid #fff;">
+  <div class="col-lg-4 offset-lg-2 align-self-center f18 text-white" style="border-right: 1px solid #fff;">
     <img src="assets/img/iTAP-white.png" class="img-responsive">
     <p class="text-center">Terminal Automation and Planning Solution</p>
     <div class="text-right pr-5">
