fix for login page

--- a/src/app/layout/components/search/search.component.html
+++ b/src/app/layout/components/search/search.component.html
@@ -1,4 +1,4 @@
-<form class="search-wrap" [formGroup]="searchForm">
+<!-- <form class="search-wrap" [formGroup]="searchForm">
   <tc-autocomplete
     formControlName="search"
     [suffixIcon]="'icofont icofont-search'"
@@ -8,4 +8,4 @@
     (keydown.enter)="goTo($event, searchForm.value.search)"
     (click)="goTo($event, searchForm.value.search)"
   ></tc-autocomplete>
-</form>
+</form> -->
