--- a/src/app/pages/dashboards/dashboard-1/dashboard.component.html
+++ b/src/app/pages/dashboards/dashboard-1/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col col-12 col-md-6 col-xl-3">
     <tc-card [tcBgColor]="'#fbfbfb'" class="animated fadeInUp delay-01s">
       <div class="row align-items-center">
@@ -161,4 +161,4 @@
     <tc-table-col [columnTitle]="'Doctor'" [columnName]="'doctor'" [enableSorting]="true"></tc-table-col>
     <tc-table-col [columnTitle]="'Injury / Condition'" [columnName]="'injury'" [enableSorting]="true"></tc-table-col>
   </tc-table>
-</tc-card>
+</tc-card> -->
