--- a/src/app/layout/components/login-form/login-form.component.html
+++ b/src/app/layout/components/login-form/login-form.component.html
@@ -1,10 +1,14 @@
+<div class="app-loader" *ngIf="spinner"><i class="icofont-spinner-alt-4 rotate"></i></div>
 <form [formGroup]="loginForm" novalidate>
+  <tc-alert *ngIf="showError" [removable]="true" [view]="'error'">
+    Invalid credentials. Please try again.
+  </tc-alert>
   <tc-form-group>
-    <tc-input [placeholder]="'Login'" formControlName="login"></tc-input>
+    <tc-input [placeholder]="'Login'" formControlName="username"></tc-input>
   </tc-form-group>
 
   <tc-form-group>
-    <tc-input [placeholder]="'Password'" [type]="'password'" formControlName="pass"></tc-input>
+    <tc-input [placeholder]="'Password'" [type]="'password'" formControlName="password"></tc-input>
   </tc-form-group>
 
   <!-- <tc-form-group>
@@ -12,7 +16,7 @@
   </tc-form-group> -->
 
   <div class="actions justify-content-between">
-    <button tc-button [view]="'accent'" class="w-100">
+    <button tc-button [view]="'accent'" (click)="login()" class="w-100">
       Login
     </button>
   </div>
