--- a/src/app/layout/components/search/search.component.html
+++ b/src/app/layout/components/search/search.component.html
@@ -1,4 +1,4 @@
-<form class="search-wrap" [formGroup]="searchForm">
+<form class="search-wrap d-none" [formGroup]="searchForm">
   <tc-autocomplete
     formControlName="search"
     [suffixIcon]="'icofont icofont-search'"
