--- a/src/app/pages/dashboards/dashboard-1/dashboard.component.scss
+++ b/src/app/pages/dashboards/dashboard-1/dashboard.component.scss
@@ -69,3 +69,137 @@
     }
   }
 }
+
+.h-100{
+  height: 100%;
+}
+
+.bg-white{
+  background-color: #fff !important;
+  background: #fff !important;
+}
+
+.announcement-wrap{
+  background-color: #FFDCC9;
+  width: 100%;
+  height: 100%;
+  padding: 10px 20px;
+
+  &-body{
+
+    &-block{
+      padding-left: 10px;
+      border-left: 3px solid #F5C0A1;
+      h5{
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+.performance-wrap{
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  padding: 10px 20px;
+
+  &-body{
+
+    &-block{
+      padding-left: 10px;
+      border-left: 3px solid #F5C0A1;
+      h5{
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+.border{
+  &-white{
+    border-bottom: 1px solid #fff;
+  }
+
+  &-blue{
+    &-light{
+      border-bottom: 1px solid #DBEBF2;
+    }
+  }
+}
+
+
+/* Pie Chart */
+.progress-pie-chart {
+  width:200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: #D3DFEF;
+  position: relative;
+  
+  display: inline-block;
+}
+.progress-pie-chart.gt-50 {
+  background-color: #0371D5;
+}
+
+.ppc-progress {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  left: calc(50% - 100px);
+  top: calc(50% - 100px);
+  width: 200px;
+  height: 200px;
+  clip: rect(0, 200px, 200px, 100px);
+}
+.ppc-progress .ppc-progress-fill {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  left: calc(50% - 100px);
+  top: calc(50% - 100px);
+  width: 200px;
+  height: 200px;
+  clip: rect(0, 100px, 200px, 0);
+  background: #0371D5;
+  transform: rotate(60deg);
+}
+.gt-50 .ppc-progress {
+  clip: rect(0, 100px, 200px, 0);
+}
+.gt-50 .ppc-progress .ppc-progress-fill {
+  clip: rect(0, 200px, 200px, 100px);
+  background: #D3DFEF;
+}
+
+.ppc-percents {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  left: calc(50% - 173.91304px/2);
+  top: calc(50% - 173.91304px/2);
+  width: 173.91304px;
+  height: 173.91304px;
+  background: #fff;
+  text-align: center;
+  display: table;
+}
+.ppc-percents span {
+  display: block;
+  font-size: 2.6em;
+  font-weight: bold;
+  color: #0371D5;
+}
+
+.pcc-percents-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.progress-pie-chart {
+  margin: 10px;
+}
+
+
+// Side Tabs
+
