--- a/src/app/pages/dashboards/dashboard-1/dashboard.component.scss
+++ b/src/app/pages/dashboards/dashboard-1/dashboard.component.scss
@@ -203,3 +203,61 @@
 
 // Side Tabs
 
+// Variables.
+$body-bg: #272635;
+$link-bg: #11111A;
+$link-color: rgba(255, 255, 255, .6);
+$active-link-color: $body-bg;
+$white: #fff;
+$text-color: #2C2C2C;
+
+
+.overview-wrap{
+  // Tab styling.
+  .tabs {
+    max-width: 60rem;
+    display: flex;
+    padding: 25px;
+    
+    > ul {
+      list-style-type: none;
+      padding: 0;
+
+      li {
+        display: block;
+        text-align: center;
+        
+        a {
+          display: block;
+          text-decoration: none;
+          background: #fff;
+          padding: 1rem 1.5rem;
+          color: #000;
+          transition: all .2s ease-in-out;
+          border-radius: 30px 0 0 30px;
+          
+          &.active {
+            background: #FEF8D3;
+            color: #000;
+            border-radius: 30px 0 0 30px;
+          }
+          
+          &:hover:not(.active) {
+            color: #000;
+          }
+        }
+      }
+    }
+    
+    section {
+      background: $white;
+      padding: 1.5rem 2.5rem;
+      display: none;
+      
+      &.active {
+        display: block;
+        background: #FEF8D3;
+      }
+    }
+  }
+}
