--- a/src/app/pages/ui/charts/ng2-charts/ng2-charts.component.html
+++ b/src/app/pages/ui/charts/ng2-charts/ng2-charts.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
 	<div class="col-12 col-md-6">
 		<tc-card [title]="'Linear'">
 			<canvas
@@ -79,4 +79,4 @@
 
 <tc-alert [beforeIcon]="'icofont-chart-pie'" [view]="'default'">
   More information can be found in <a href="https://github.com/valor-software/ng2-charts" target="_blank">official page</a>.
-</tc-alert>
+</tc-alert> -->
