--- a/src/app/pages/ui/charts/ngx-echarts/ngx-echarts.component.html
+++ b/src/app/pages/ui/charts/ngx-echarts/ngx-echarts.component.html
@@ -1,4 +1,4 @@
-<tc-card [title]="'Bar'">
+<!-- <tc-card [title]="'Bar'">
   <div echarts [options]="barOptions" class="chat-container container-h-400"></div>
 </tc-card>
 
@@ -30,4 +30,4 @@
 
 <tc-alert [beforeIcon]="'icofont-chart-line'" [view]="'default'">
   More information can be found in <a href="https://github.com/xieziyu/ngx-echarts" target="_blank">official page</a>.
-</tc-alert>
+</tc-alert> -->
